* [Bug 1356] core dump from refclock_nmea when can't open /dev/gpsU.
* [Bug 1358] AIX 4.3 sntp/networking.c IPV6_JOIN_GROUP undeclared.
* CID 101: pointer/array cleanup.
(4.2.5p238-RC) 2009/10/27 Released by Harlan Stenn <stenn@ntp.org>
* Changes from Dave Mills.
* driver4.html updates from Dave Mills.
* [Bug 1252] PPSAPI cleanup on ntpd/refclock_wwvb.c.
* [Bug 1354] libtool error building after bootstrap with Autoconf 2.64.
* Allow NTP_VPATH_HACK configure test to handle newer gmake versions.
* CIDs 94-99 make it more clearly impossible for sock_hash() to return
  a negative number.
* CID 105, 106 ensure ntpdc arrays are not overrun even if callers
  misbehave.
* CID 113 use va_end() in refclock_true.c true_debug().
* Get rid of configure tests for __ss_family and __ss_len when the more
  common ss_family and ss_len are present.
(4.2.5p237-RC) 2009/10/26 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 610] NMEA support for using PPSAPI on a different device.
* [Bug 1238] use only fudge time2 to offset NMEA serial timestamp.
* [Bug 1355] ntp-dev won't compile on OpenBSD 4.6.
(4.2.5p236-RC) 2009/10/22 Released by Harlan Stenn <stenn@ntp.org>
* Cleanup from Dave Mills.
* [Bug 1343] ntpd/ntp_io.c close_fd() does not compile on Solaris 7.
* [Bug 1353] ntpq "rv 0 settimeofday" always shows UNKNOWN on unix.
* Do not attempt to execute built binaries from ntpd/Makefile when
  cross-compiling (keyword-gen and ntpd --saveconfigquit).
* sntp/main.c: Remove duplicate global adr_buf[] (also defined in
  networking.c) which Piotr Grudzinski identified breaking his build.
* Correct in6addr_any test in configure.ac to attempt link too.
(4.2.5p235-RC) 2009/10/18 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1343] lib/isc build breaks on systems without IPv6 headers.
(4.2.5p234-RC) 2009/10/16 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1339] redux, use unmodified lib/isc/win32/strerror.c and
  move #define strerror... to a header not used by lib/isc code.